[package]
name = "mas-data-model"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
thiserror.workspace = true
serde.workspace = true
url.workspace = true
crc = "3.0.1"
ulid = { version = "1.0.0", features = ["serde"] }
rand.workspace = true
rand_chacha = "0.3.1"

mas-iana = { path = "../iana" }
mas-jose = { path = "../jose" }
oauth2-types = { path = "../oauth2-types" }
