[package]
name = "mas-data-model"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
chrono.workspace = true
thiserror.workspace = true
serde.workspace = true
url.workspace = true
crc = "3.0.1"
ulid.workspace = true
rand.workspace = true
rand_chacha = "0.3.1"

mas-iana.workspace = true
mas-jose.workspace = true
oauth2-types.workspace = true
