[package]
name = "mas-email"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
tracing.workspace = true
thiserror.workspace = true
headers.workspace = true

mas-templates.workspace = true

[dependencies.lettre]
version = "0.11.4"
default-features = false
features = ["tokio1-rustls-tls", "hostname", "builder", "tracing", "pool", "smtp-transport", "sendmail-transport"]
