[package]
name = "mas-email"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
headers.workspace = true
lettre.workspace = true
thiserror.workspace = true
tracing.workspace = true

mas-templates.workspace = true
