[package]
name = "mas-graphql"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-graphql = { version = "6.0.10", features = ["chrono", "url"] }
async-trait = "0.1.74"
chrono.workspace = true
lettre = { version = "0.11.1", default-features = false  }
serde.workspace = true
thiserror.workspace = true
tokio = { version = "1.34.0", features = ["sync"] }
tracing.workspace = true
tower = { version = "0.4.13", features = ["util"] }
ulid.workspace = true
url.workspace = true

oauth2-types = { path = "../oauth2-types" }
mas-data-model = { path = "../data-model" }
mas-matrix = { path = "../matrix" }
mas-policy = { path = "../policy" }
mas-storage = { path = "../storage" }

[[bin]]
name = "schema"
