[package]
name = "mas-graphql"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-graphql = { version = "6.0.11", features = ["chrono", "url"] }
async-trait = "0.1.77"
chrono.workspace = true
lettre = { version = "0.11.4", default-features = false  }
serde.workspace = true
thiserror.workspace = true
tokio = { version = "1.35.1", features = ["sync"] }
tracing.workspace = true
tower = { version = "0.4.13", features = ["util"] }
ulid.workspace = true
url.workspace = true

oauth2-types.workspace = true
mas-data-model.workspace = true
mas-matrix.workspace = true
mas-policy.workspace = true
mas-storage.workspace = true

[[bin]]
name = "schema"
doc = false
