[package]
name = "mas-graphql"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-graphql.workspace = true
async-trait.workspace = true
chrono.workspace = true
lettre.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { version = "1.37.0", features = ["sync"] }
tracing.workspace = true
tower.workspace = true
ulid.workspace = true
url.workspace = true

oauth2-types.workspace = true
mas-data-model.workspace = true
mas-matrix.workspace = true
mas-policy.workspace = true
mas-storage.workspace = true

[[bin]]
name = "schema"
doc = false
