[package]
name = "mas-handlers"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# Async runtime
tokio.workspace = true
futures-util = "0.3.30"
async-trait.workspace = true

# Logging and tracing
tracing.workspace = true
opentelemetry.workspace = true
opentelemetry-semantic-conventions.workspace = true

# Error management
thiserror.workspace = true
anyhow.workspace = true
sentry.workspace = true

# Web server
hyper.workspace = true
tower.workspace = true
tower-http.workspace = true
axum.workspace = true
axum-macros = "0.4.1"
axum-extra.workspace = true
rustls.workspace = true

aide.workspace = true
async-graphql.workspace = true
schemars.workspace = true

# Emails
lettre.workspace = true

# Database access
sqlx.workspace = true

# Various structure (de)serialization
serde.workspace = true
serde_with = { version = "3.9.0", features = ["hex", "chrono"] }
serde_json.workspace = true
serde_urlencoded = "0.7.1"

# Password hashing
argon2 = { version = "0.5.3", features = ["password-hash", "std"] }
bcrypt = "0.15.1"
pbkdf2 = { version = "0.12.2", features = [
    "password-hash",
    "std",
    "simple",
    "parallel",
] }
zeroize = "1.8.1"

# Various data types and utilities
base64ct = "1.6.0"
camino.workspace = true
chrono.workspace = true
governor.workspace = true
indexmap = "2.4.0"
psl = "2.1.55"
time = "0.3.36"
url.workspace = true
mime = "0.3.17"
minijinja.workspace = true
nonzero_ext.workspace = true
rand.workspace = true
rand_chacha = "0.3.1"
headers.workspace = true
ulid.workspace = true

mas-axum-utils.workspace = true
mas-config.workspace = true
mas-data-model.workspace = true
mas-http.workspace = true
mas-i18n.workspace = true
mas-iana.workspace = true
mas-jose.workspace = true
mas-keystore.workspace = true
mas-matrix.workspace = true
mas-oidc-client.workspace = true
mas-policy.workspace = true
mas-router.workspace = true
mas-spa.workspace = true
mas-storage.workspace = true
mas-storage-pg.workspace = true
mas-templates.workspace = true
oauth2-types.workspace = true
zxcvbn = "3.1.0"

[dev-dependencies]
insta.workspace = true
tracing-subscriber.workspace = true
cookie_store = "0.21.0"
sqlx.workspace = true
