[package]
name = "mas-http"
description = "HTTP utilities for the Matrix Authentication Service"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
bytes = "1.6.0"
futures-util = "0.3.30"
headers.workspace = true
http.workspace = true
http-body.workspace = true
hyper.workspace = true
hyper-rustls = { workspace = true, optional = true }
opentelemetry.workspace = true
opentelemetry-semantic-conventions.workspace = true
rustls = { workspace = true, optional = true }
rustls-platform-verifier = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
serde_urlencoded = "0.7.1"
thiserror.workspace = true
tower.workspace = true
tower-http = { version = "0.4.4", features = ["cors"] }
tracing.workspace = true
tracing-opentelemetry.workspace = true

mas-tower = { workspace = true, optional = true }

[dev-dependencies]
anyhow.workspace = true
tokio.workspace = true

[features]
client = [
  "dep:mas-tower",
  "dep:rustls",
  "hyper/tcp",
  "dep:hyper-rustls",
  "dep:rustls-platform-verifier",
  "tower/limit",
  "tower-http/timeout",
  "tower-http/follow-redirect",
  "tower-http/set-header",
]
