[package]
name = "mas-i18n-scan"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
camino.workspace = true
clap.workspace = true
tera.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true

mas-i18n = { path = "../i18n" }