[package]
name = "mas-i18n"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
pad = "0.1.6"
pest = "2.7.3"
pest_derive = "2.7.3"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true