[package]
name = "mas-i18n"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
camino.workspace = true
icu_calendar = { version = "1.4.0", features = ["compiled_data", "std"] }
icu_datetime = { version = "1.4.0", features = ["compiled_data", "std"] }
icu_list = { version = "1.4.0", features = ["compiled_data", "std"] }
icu_locid = { version = "1.4.0", features = ["std",] }
icu_locid_transform = { version = "1.4.0", features = ["compiled_data", "std"] }
icu_plurals = { version = "1.4.0", features = ["compiled_data", "std"] }
icu_provider = { version = "1.4.0", features = ["std", "sync"] }
icu_provider_adapters = { version = "1.4.0", features = ["std"] }
icu_relativetime = { version = "0.1.4", features = ["compiled_data", "std"] }
pad = "0.1.6"
pest = "2.7.6"
pest_derive = "2.7.6"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
writeable = "0.5.4"
