[package]
name = "mas-iana-codegen"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait = "0.1.74"
camino.workspace = true
convert_case = "0.6.0"
csv = "1.3.0"
futures-util = "0.3.28"
hyper = { version = "0.14.27", features = ["tcp", "client", "http1"] }
serde.workspace = true
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
tracing.workspace = true
tracing-subscriber.workspace = true
