[package]
name = "mas-iana-codegen"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
camino.workspace = true
convert_case = "0.6.0"
csv = "1.3.0"
futures-util = "0.3.30"
reqwest = { version = "0.12.5", default-features = false, features = [
    "rustls-tls",
] }
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
