[package]
name = "mas-iana"
version = "0.1.0"
authors = ["Quentin Gliech <quenting@element.io>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
serde = { workspace = true, optional = true }
schemars = { version = "0.8.13", default-features = false, optional = true }

[features]
default = ["serde", "schemars"]
serde = ["dep:serde"]
schemars = ["dep:schemars"]
