[package]
name = "mas-iana"
description = "IANA registry data for JOSE and OAuth 2.0"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }

[features]
default = ["serde", "schemars"]
serde = ["dep:serde"]
schemars = ["dep:schemars"]
