[package]
name = "mas-jose"
version = "0.1.0"
authors = ["Quentin Gliech <quenting@element.io>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
base64ct = { version = "1.6.0", features = ["std"] }
chrono.workspace = true
digest = "0.10.7"
ecdsa = { version = "0.16.8", features = ["signing", "verifying"] }
elliptic-curve = "0.13.5"
generic-array = "0.14.7"
hmac = "0.12.1"
k256 = { version = "0.13.1", features = ["ecdsa"] }
p256 = { version = "0.13.2", features = ["ecdsa"] }
p384 = { version = "0.13.0", features = ["ecdsa"] }
rand.workspace = true
rsa = "0.9.2"
schemars = "0.8.12"
sec1 = "0.7.3"
serde.workspace = true
serde_json.workspace = true
serde_with = { version = "3.3.0", features = ["base64"] }
sha2 = { version = "0.10.7", features = ["oid"] }
signature = "2.1.0"
thiserror.workspace = true
tracing.workspace = true
url.workspace = true

mas-iana = { path = "../iana" }

[dev-dependencies]
insta = { version = "1.31.0" }
rand_chacha = "0.3.1"
