[package]
name = "mas-keystore"
version = "0.1.0"
authors = ["Quentin Gliech <quenting@element.io>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
aead = { version = "0.5.2", features = ["std"] }
const-oid = { version = "0.9.2", features = ["std"] }
cookie = { version = "0.17.0", features = ["key-expansion", "private"] }
der = { version = "0.7.7", features = ["std"] }
ecdsa = { version = "0.16.7", features = ["std"] }
elliptic-curve = { version = "0.13.5", features = ["std", "pem", "sec1"] }
k256 = { version = "0.13.1", features = ["std"] }
p256 = { version = "0.13.2", features = ["std"] }
p384 = { version = "0.13.0", features = ["std"] }
pem-rfc7468 = { version = "0.7.0", features = ["std"] }
pkcs1 = { version = "0.7.5", features = ["std"] }
pkcs8 = { version = "0.10.2", features = ["std", "pkcs5", "encryption"] }
rand = "0.8.5"
rsa = { version = "0.9.2", features = ["std", "pem"] }
sec1 = { version = "0.7.2", features = ["std"] }
spki = { version = "0.7.2", features = ["std"] }
thiserror = "1.0.40"
generic-array = "0.14.7"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
base64ct = "1.6.0"

mas-iana = { path = "../iana" }
mas-jose = { path = "../jose" }

[dev-dependencies]
insta = { version = "1.30.0", features = ["yaml"] }
rand_chacha = "0.3.1"
