[package]
name = "mas-keystore"
description = "Secret keys store used by the Matrix Authentication Service"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
aead = { version = "0.5.2", features = ["std"] }
const-oid = { version = "0.9.6", features = ["std"] }
der = { version = "0.7.8", features = ["std"] }
ecdsa = { version = "0.16.9", features = ["std"] }
elliptic-curve = { version = "0.13.8", features = ["std", "pem", "sec1"] }
k256 = { version = "0.13.3", features = ["std"] }
p256 = { version = "0.13.2", features = ["std"] }
p384 = { version = "0.13.0", features = ["std"] }
pem-rfc7468 = { version = "0.7.0", features = ["std"] }
pkcs1 = { version = "0.7.5", features = ["std"] }
pkcs8 = { version = "0.10.2", features = ["std", "pkcs5", "encryption"] }
rand.workspace = true
rsa = { version = "0.9.6", features = ["std", "pem"] }
sec1 = { version = "0.7.3", features = ["std"] }
spki = { version = "0.7.3", features = ["std"] }
thiserror.workspace = true
generic-array = "0.14.7"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
base64ct = "1.6.0"

mas-iana.workspace = true
mas-jose.workspace = true

[dev-dependencies]
insta = { version = "1.34.0", features = ["yaml"] }
rand_chacha = "0.3.1"
