[package]
name = "mas-listener"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
bytes = "1.6.0"
event-listener = "5.3.0"
futures-util = "0.3.30"
http-body.workspace = true
hyper = { workspace = true, features = ["server"] }
libc = "0.2.154"
pin-project-lite = "0.2.14"
socket2 = "0.5.6"
thiserror.workspace = true
tokio = { version = "1.36.0", features = ["net", "rt", "macros", "signal", "time"] }
tokio-rustls = "0.25.0"
tower-http = { version = "0.4.4", features = ["add-extension"] }
tower-service = "0.3.2"
tracing.workspace = true

[dev-dependencies]
anyhow.workspace = true
rustls-pemfile = "2.1.1"
tokio = { version = "1.36.0", features = ["net", "rt", "macros", "signal", "time", "rt-multi-thread"] }
tokio-test = "0.4.4"
tracing-subscriber.workspace = true

[[example]]
name = "demo"
path = "examples/demo/main.rs"
