[package]
name = "mas-listener"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
bytes = "1.6.0"
event-listener = "5.3.1"
futures-util = "0.3.30"
http-body.workspace = true
hyper = { workspace = true, features = ["server"] }
hyper-util.workspace = true
libc = "0.2.155"
pin-project-lite = "0.2.14"
socket2 = "0.5.7"
thiserror.workspace = true
tokio.workspace = true
tokio-rustls = "0.26.0"
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true

[dev-dependencies]
anyhow.workspace = true
rustls-pemfile = "2.1.2"
tokio.workspace = true
tokio-test = "0.4.4"
tracing-subscriber.workspace = true

[[example]]
name = "demo"
path = "examples/demo/main.rs"
