[package]
name = "mas-matrix-synapse"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait = "0.1.77"
http.workspace = true
serde.workspace = true
tower.workspace = true
tracing.workspace = true
url.workspace = true

mas-axum-utils.workspace = true
mas-http.workspace = true
mas-matrix.workspace = true
