[package]
name = "mas-matrix-synapse"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
http.workspace = true
serde.workspace = true
tower.workspace = true
tracing.workspace = true
url.workspace = true
urlencoding = "2.1.3"

mas-axum-utils.workspace = true
mas-http.workspace = true
mas-matrix.workspace = true
