[package]
name = "mas-matrix"
version = "0.1.0"
authors = ["Quentin Gliech <quenting@element.io>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow.workspace = true
serde.workspace = true
async-trait = "0.1.72"
http.workspace = true
tokio = { version = "1.30.0", features = ["sync", "macros", "rt"] }
url.workspace = true
