[package]
name = "oauth2-types"
version = "0.1.0"
authors = ["Quentin Gliech <quenting@element.io>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
http.workspace = true
serde.workspace = true
serde_json.workspace = true
language-tags = { version = "0.3.2", features = ["serde"] }
url.workspace = true
parse-display = "0.8.2"
serde_with = { version = "3.3.0", features = ["chrono"] }
chrono.workspace = true
sha2 = "0.10.7"
data-encoding = "2.4.0"
thiserror.workspace = true

mas-iana = { path = "../iana" }
mas-jose = { path = "../jose" }

[dev-dependencies]
assert_matches = "1.5.0"
