[package]
name = "oauth2-types"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
http.workspace = true
serde.workspace = true
serde_json.workspace = true
language-tags = { version = "0.3.2", features = ["serde"] }
url.workspace = true
parse-display = "0.8.2"
serde_with = { version = "3.3.0", features = ["chrono"] }
chrono.workspace = true
sha2 = "0.10.8"
data-encoding = "2.4.0"
thiserror.workspace = true

mas-iana = { path = "../iana" }
mas-jose = { path = "../jose" }

[dev-dependencies]
assert_matches = "1.5.0"
