[package]
name = "mas-oidc-client"
description = "OpenID Connect client library used by the Matrix Authentication Service"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = ["hyper", "keystore"]
hyper = [
    "dep:http-body",
    "dep:hyper",
    "dep:hyper-rustls",
    "dep:rustls",
    "dep:rustls-platform-verifier",
    "dep:tower-http",
    "tower/limit",
]
keystore = ["dep:mas-keystore"]

[dependencies]
base64ct = { version = "1.6.0", features = ["std"] }
bytes = "1.5.0"
chrono.workspace = true
form_urlencoded = "1.2.1"
futures-util = "0.3.30"
headers.workspace = true
http.workspace = true
language-tags = "0.3.2"
mime = "0.3.17"
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded = "0.7.1"
serde_with = "3.7.0"
thiserror.workspace = true
tower.workspace = true
tracing.workspace = true
url.workspace = true

mas-http.workspace = true
mas-iana.workspace = true
mas-jose.workspace = true
mas-keystore = { workspace = true, optional = true }
oauth2-types.workspace = true

# Default http service
http-body = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }
hyper-rustls = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rustls-platform-verifier = { workspace = true, optional = true }

[dependencies.tower-http]
version = "0.4.4"
features = ["follow-redirect", "set-header", "timeout", "map-request-body", "util"]
optional = true

[dev-dependencies]
assert_matches = "1.5.0"
bitflags = "2.5.0"
mas-keystore.workspace = true
rand_chacha = "0.3.1"
tokio = { version = "1.36.0", features = ["rt", "macros", "rt-multi-thread"] }
wiremock = "0.5.22"
