[package]
name = "mas-policy"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
opa-wasm = { git = "https://github.com/matrix-org/rust-opa-wasm.git" }
serde.workspace = true
serde_json.workspace = true
schemars = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { version = "1.35.1", features = ["io-util", "rt"] }
tracing.workspace = true
wasmtime = { version = "18.0.3", default-features = false, features = ["async", "cranelift"] }

mas-data-model.workspace = true
oauth2-types.workspace = true

[dev-dependencies]
tokio = { version = "1.35.1", features = ["fs", "rt", "macros"] }

[features]
cache = ["wasmtime/cache"]
jsonschema = ["dep:schemars"]

[[bin]]
name = "schema"
required-features = ["jsonschema"]
