[package]
name = "mas-policy"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
opa-wasm = { git = "https://github.com/matrix-org/rust-opa-wasm.git" }
serde.workspace = true
serde_json.workspace = true
schemars = { workspace = true, optional = true }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
wasmtime = { version = "22.0.0", default-features = false, features = ["async", "cranelift", "parallel-compilation"] }

mas-data-model.workspace = true
oauth2-types.workspace = true

[features]
jsonschema = ["dep:schemars"]

[[bin]]
name = "schema"
required-features = ["jsonschema"]
