[package]
name = "mas-router"
version = "0.1.0"
authors = ["Quentin Gliech <quenting@element.io>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
axum = { version = "0.6.20", default-features = false }
serde = { version = "1.0.183", features = ["derive"] }
serde_urlencoded = "0.7.1"
url = "2.4.0"
ulid = "1.0.0"
