[package]
name = "mas-router"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
serde_urlencoded = "0.7.1"
url.workspace = true
ulid.workspace = true
