[package]
name = "mas-spa"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
camino = { version = "1.1.6", features = ["serde1"] }

